<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".profile.ContactActivity">

    <ImageView
        android:id="@+id/iv_bg_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_fragment2"
        android:contentDescription="@string/background_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/iv_description_profile"
        style="@style/TextWhiteRocknRollBold18Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_150sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/contact_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:clickable="true"
        app:cardBackgroundColor="@color/purple"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_description_profile">

        <TextView
            style="@style/TextWhiteRocknRollBold18Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/email" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_whatsapp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:clickable="true"
        app:cardBackgroundColor="@color/purple"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_email">

        <TextView
            style="@style/TextWhiteRocknRollBold18Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/whatsapp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_instagram"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:clickable="true"
        app:cardBackgroundColor="@color/purple"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_whatsapp">

        <TextView
            style="@style/TextWhiteRocknRollBold18Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/instagram" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>